; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-typhoon.c_typhoon_mute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-typhoon.c_typhoon_mute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.typhoon = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.typhoon*)* @typhoon_mute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @typhoon_mute(%struct.typhoon* %0) #0 {
  %2 = alloca %struct.typhoon*, align 8
  store %struct.typhoon* %0, %struct.typhoon** %2, align 8
  %3 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %4 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %18

8:                                                ; preds = %1
  %9 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %10 = call i32 @typhoon_setvol_generic(%struct.typhoon* %9, i32 0)
  %11 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %12 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %13 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @typhoon_setfreq_generic(%struct.typhoon* %11, i32 %14)
  %16 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %17 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %16, i32 0, i32 0
  store i32 1, i32* %17, align 4
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @typhoon_setvol_generic(%struct.typhoon*, i32) #1

declare dso_local i32 @typhoon_setfreq_generic(%struct.typhoon*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
